hphp/test/zend/bad/ext/session/tests/010.php
<?php
error_reporting(E_ALL);

$session_array = explode(";", @session_encode());
print "I live\n";
?>